--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -56,32 +56,32 @@
         </dependency>
 
         <!-- 服务注册/发现-->
-        <!--<dependency>
+        <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
-        &lt;!&ndash; 配置中心来做配置管理&ndash;&gt;
+        <!-- 配置中心来做配置管理-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>-->
     </dependencies>
     <dependencyManagement>
-        <!--<dependencies>
+        <dependencies>
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2.1.0.RELEASE</version>
+                <version>2.1.1.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-        </dependencies>-->
+        </dependencies>
     </dependencyManagement>
 </project>
