--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 88
+
 spring:
   application:
     name: gulimall-gateway
@@ -8,7 +11,11 @@ spring:
     gateway:
       routes:
         - id: test_route
-          uri: https://www/baidu.com
+          uri: https://www.baidu.com
+          predicates:
+            - Query=url,baidu
 
-server:
-  port: 88
+        - id: qq_route
+          uri: https://www.qq.com
+          predicates:
+            - Query=url,qq
