--- a/renren-fast/pom.xml
+++ b/renren-fast/pom.xml
@@ -51,6 +51,20 @@
 	</properties>
 
 	<dependencies>
+		<!-- 服务注册/发现-->
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+			<version>2021.0.1.0</version>
+		</dependency>
+
+		<!-- 配置中心来做配置管理-->
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+			<version>2021.0.1.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
