--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -10,15 +10,21 @@ spring:
         server-addr: 127.0.0.1:8848
     gateway:
       routes:
-        - id: test_route
-          uri: https://www.baidu.com
-          predicates:
-            - Query=url,baidu
+        #- id: test_route
+        #  uri: https://www.baidu.com
+        #  predicates:
+        #    - Query=url,baidu
 
-        - id: qq_route
-          uri: https://www.qq.com
+        #- id: qq_route
+        #  uri: https://www.qq.com
+        #  predicates:
+        #    - Query=url,qq
+        - id: product_route
+          uri: lb://gulimall-product
           predicates:
-            - Query=url,qq
+            - Path=/api/product/**
+          filters:
+            - RewritePath=/api/(?<segment>.*),/$\{segment}
 
         - id: admin_route
           uri: lb://renren-fast
@@ -26,6 +32,9 @@ spring:
             - Path=/api/**
           filters:
             - RewritePath=/api/(?<segment>.*),/renren-fast/$\{segment}
+
+
+
 ## 前端项目，/api
 ## http://localhost:88/api/captcha.jpg   http://localhost:8080/renren-fast/captcha.jpg
 ## http://localhost:88/api/product/category/list/tree http://localhost:10000/product/category/list/tree
