--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -10,10 +10,17 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto
+      logic-delete-value: 1
+      logic-not-delete-value: 0
 server:
   port: 10001
+
+logging:
+  level:
+    com.three.gulimall: debug
